# frankenstein-service

./: .env.dev  Cargo.toml  README.md  docker-compose.yml
db/: init.sql
src/: config.rs  main.rs
src/auth/: handlers.rs  mod.rs  models.rs  services.rs
src/tasks/: handlers.rs  mod.rs  models.rs
