[package]
name = "frankenstein-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4"
actix-rt = "^2"
actix-service = "2"
actix-web-httpauth = "0.8.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres", "macros"]}
uuid = { version = "1.0", features = ["v4"]}
dotenv = "0.15"
jsonwebtoken = "8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"